--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="edit_mood">Edit Mood</string>
     <string name="add_images">Add Images</string>
     <string name="add_expense_income">Add Expense or Income</string>
+    <string name="edit_diary_hint">How was your day?</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
