--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="add_expense_income">Add Expense or Income</string>
     <string name="edit_diary_hint">How was your day?</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="save_diary_button">Save Diary</string>
 </resources>
