--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Dear Mory</string>
+    <string name="my_diaries">My Diaries</string>
     <string name="edit_mood">Edit Mood</string>
     <string name="add_images">Add Images</string>
     <string name="add_expense_income">Add Expense or Income</string>
