--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,8 @@
     <string name="next">Next</string>
     <string name="this_month">This Month</string>
     <string name="reminder_label_hint">Label</string>
+    <string name="reminder_date_hint">Date</string>
+    <string name="reminder_vibrate_hint">Vibrate</string>
     <string name="add_reminder_button">Add</string>
     <string name="repeat_reminder_label">Repeat</string>
     <string name="day_of_week_mo">Mo</string>
